<Reset style sheet added>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" style="css" href="reset.css">
+
+</head>
+
 <h1>This is Dylan Bakers Homepage</h1>
 <p>I created this and put it online</p>
 
